{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "TouchControls",
            "id": "7011d7a2-0c11-48b3-bf37-2485d1fe95c8",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "7e02c410-075b-4cfe-9cba-6673618d1d28",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "bf16a264-e52a-4970-a2b3-f6ddc86a0c23",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef1761b8-3484-4690-a124-6081cb0f7671",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71a8b644-e66d-48bb-8978-f987131ccd6e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}